# behave-prophet

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  schema.sql
.github/workflows/: coverage.yml
behave/: prophet_evaluator.py
behave_prophet/: prophet_evaluator.py
docs/: conf.py  index.rst
docs/usage/: installation.md  quickstart.md
examples/: example.ipynb
flair/: colors.py  prophet_evaluator.py
tests/: test_inputs.py  test_raise.py
