[tool.poetry]
name = "behave-prophet"
version = "0.1.0"
description = ""
authors = ["franperic <fran.peric@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
prophet = "^1.1.4"
numpy = "^1.25.2"
plotly = "^5.17.0"
ipykernel = "^6.25.2"
psycopg-binary = "^3.1.12"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.22"
nbformat = "^5.9.2"
tqdm = "^4.66.1"
pyarrow = "^14.0.1"
cmdstanpy = "^1.2.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"